--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -22,30 +22,30 @@
     "TESTING TOPOLOGY\n",
     "----------------\n",
     "\n",
-    "Receiving DTN at DENV: 192.168.120.117 VFC= br1 ofport 11 vlan1117\n",
-    "Calibers controller at ATLA: 192.168.120.119 VFC= br1 ofport 9 vlan 1119 \n",
+    "- Receiving DTN at DENV: 192.168.120.117 VFC= br1 ofport 11 vlan1117\n",
+    "- Calibers controller at ATLA: 192.168.120.119 VFC= br1 ofport 9 vlan 1119 \n",
     "\n",
-    "AMST - DENV corsa switch has issues. not yet online\n",
+    "AMST - DENV rtt= 166\n",
     "- OSCARS vlan 2280 es.net-6693\n",
     "- DTN 192.168.120.190 VFC= br1 ofport ?\n",
     "\n",
-    "CERN - DENV\n",
+    "CERN - DENV rtt= 151\n",
     "- OSCARS vlan 2597 es.net-6678\n",
     "- DTN: 192.168.120.194 VFC= br1 ofport 10 vlan 1194\n",
     "\n",
-    "AOFA - DENV\n",
+    "AOFA - DENV rtt= 67\n",
     "- OSCARS vlan 289  es.net-6691\n",
     "- DTN: 192.168.120.191 VFC= br1 ofport 1 vlan 1191\n",
     "\n",
-    "ATLA - DENV\n",
+    "ATLA - DENV rtt= 49.4\n",
     "- OSCARS vlan 384  es.net-6690\n",
     "- DTN: 192.168.120.200 VFC= br1 ofport 8 vlan 1200\n",
     "\n",
-    "WASH - DENV\n",
+    "WASH - DENV rtt= 62\n",
     "- OSCARS vlan 1591 es.net-6692\n",
     "- DTN: 192.168.120.192 VFC= br1 ofport 10 vlan 1192\n",
     "\n",
-    "DENV - DENV\n",
+    "DENV - DENV rtt= 0.2\n",
     "- DTN: 192.168.120.201 VFC= br1 ofport 10 vlan 1201"
    ]
   },
@@ -56,10 +56,10 @@
     "CALIBERS TOPOLOGY\n",
     "-----------------\n",
     "\n",
-    "Receiving DTN at SCInet ?\n",
-    "Calibers controller at ATLA: 192.168.120.119 VFC= br2 ofport 9 vlan 119 \n",
+    "- Receiving DTN at SCInet ?\n",
+    "- Calibers controller at ATLA: 192.168.120.119 VFC= br2 ofport 9 vlan 119 \n",
     "\n",
-    "AMST - SCinet corsa switch has issues. not yet online\n",
+    "AMST - SCinet\n",
     "- OSCARS vlan 2056 es.net-6615\n",
     "- DTN 192.168.120.190 VFC= br2 ofport ?\n",
     "\n",
@@ -167,6 +167,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "wget https://repo.continuum.io/archive/Anaconda2-5.0.1-Linux-x86_64.sh\n",
+    "\n",
+    "sh ./Anaconda2-5.0.1-Linux-x86_64.sh\n",
+    "\n",
+    "as root apt-get install python-pip\n",
+    "\n",
+    "pip install flask flask_restfull\n",
+    "\n",
+    "jupyter notebook --no-browser \n",
+    "\n",
+    "jupyter notebook --generate-config\n",
+    "[http://jupyter-notebook.readthedocs.io/en/stable/public_server.html]\n",
+    "jupyter notebook password\n",
+    "\n",
+    "vi ~/.jupyter/jupyter_notebook_config.py\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
