--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -91,8 +91,8 @@
     "TCP ONLY TOPOLOGY\n",
     "----------------\n",
     "\n",
-    "Receiving DTN at SCInet ?\n",
-    "Calibers controller at ATLA: 192.168.120.113 VFC= br3 ofport 9 vlan 113 \n",
+    "- Receiving DTN at SCInet ?\n",
+    "- Calibers controller at ATLA: 192.168.120.113 VFC= br3 ofport 9 vlan 113 \n",
     "\n",
     "AMST - SCinet corsa switch has issues. not yet online\n",
     "- OSCARS vlan 2057 es.net-6616\n",
@@ -206,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
