--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "AMST - DENV rtt= 166\n",
     "- OSCARS vlan 2280 es.net-6693\n",
-    "- DTN 192.168.120.190 VFC= br1 ofport ?\n",
+    "- DTN 192.168.120.190 VFC= br1 ofport 23\n",
     "\n",
     "CERN - DENV rtt= 151\n",
     "- OSCARS vlan 2597 es.net-6678\n",
@@ -61,7 +61,7 @@
     "\n",
     "AMST - SCinet\n",
     "- OSCARS vlan 2056 es.net-6615\n",
-    "- DTN 192.168.120.190 VFC= br2 ofport ?\n",
+    "- DTN 192.168.120.190 VFC= br2 ofport 23\n",
     "\n",
     "CERN - SCinet\n",
     "- OSCARS vlan 2058 es.net-6617\n",
@@ -80,8 +80,7 @@
     "- DTN: 192.168.120.192 VFC= br2 ofport 10 vlan 192\n",
     "\n",
     "DENV - SCinet \n",
-    "- OSCARS vlan 2060 es.net-6619\n",
-    "- DTN: 192.168.120.201 VFC= br2 ofport 10 vlan 201"
+    "-DTN: 192.168.100.2 VFC= ? ofport ? vlan ???"
    ]
   },
   {
@@ -112,11 +111,10 @@
     "\n",
     "WASH - SCinet \n",
     "- OSCARS vlan 2053 es.net-6614\n",
-    "- DTN: 192.168.120.192 VFC= br3 ofport 10 vlan 192\n",
+    "- DTN: 192.168.120.192 VFC= br3 ofport 10 vlan 115\n",
     "\n",
     "DENV - SCinet \n",
-    "- OSCARS vlan 2061 es.net-6620\n",
-    "- DTN: 192.168.120.115 VFC= br3 ofport 10 vlan 115"
+    "- DTN: 192.168.200.2 VFC= ? ofport ? vlan ???"
    ]
   },
   {
