--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -93,9 +93,9 @@
     "- Receiving DTN at SCInet ?\n",
     "- Calibers controller at ATLA: 192.168.120.193 VFC= br3 ofport 9 vlan 193 \n",
     "\n",
-    "AMST - SCinet corsa switch has issues. not yet online\n",
+    "AMST - SCinet \n",
     "- OSCARS vlan 2057 es.net-6616\n",
-    "- DTN 192.168.120.111 VFC= br3 ofport ?\n",
+    "- DTN 192.168.120.111 VFC= br3 ofport 23\n",
     "\n",
     "CERN - SCinet\n",
     "- OSCARS vlan 2059 es.net-6618\n",
