--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -56,7 +56,7 @@
     "CALIBERS TOPOLOGY\n",
     "-----------------\n",
     "\n",
-    "- Receiving DTN at SCInet ?\n",
+    "- Receiving DTN at SCInet: 192.168.100.2 VFC= ? ofport ? vlan ???\n",
     "- Calibers controller at ATLA: 192.168.120.119 VFC= br2 ofport 9 vlan 119 \n",
     "\n",
     "AMST - SCinet\n",
@@ -80,7 +80,8 @@
     "- DTN: 192.168.120.192 VFC= br2 ofport 10 vlan 192\n",
     "\n",
     "DENV - SCinet \n",
-    "-DTN: 192.168.100.2 VFC= ? ofport ? vlan ???"
+    "- OSCARS vlan 2060 es.net-6619\n",
+    "- DTN: 192.168.120.201 VFC= br2 ofport 10 vlan 201"
    ]
   },
   {
@@ -112,9 +113,10 @@
     "WASH - SCinet \n",
     "- OSCARS vlan 2053 es.net-6614\n",
     "- DTN: 192.168.120.115 VFC= br3 ofport 10 vlan 115\n",
-    "\n",
+    " \n",
     "DENV - SCinet \n",
-    "- DTN: 192.168.200.2 VFC= ? ofport ? vlan ???"
+    "- OSCARS vlan 2061 es.net-6620\n",
+    "- DTN: 192.168.120.201 VFC= br3 ofport 10 vlan 201"
    ]
   },
   {
