--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -91,7 +91,7 @@
     "TCP ONLY TOPOLOGY\n",
     "----------------\n",
     "\n",
-    "- Receiving DTN at SCInet ?\n",
+    "- Receiving DTN at SCInet 192.168.200.2 VFC= ? ofport ? vlan ???\n",
     "- Calibers controller at ATLA: 192.168.120.193 VFC= br3 ofport 9 vlan 193 \n",
     "\n",
     "AMST - SCinet \n",
@@ -116,7 +116,7 @@
     " \n",
     "DENV - SCinet \n",
     "- OSCARS vlan 2061 es.net-6620\n",
-    "- DTN: 192.168.120.201 VFC= br3 ofport 10 vlan 201"
+    "- DTN: 192.168.120.116 VFC= br3 ofport 10 vlan 116"
    ]
   },
   {
