--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "\n",
@@ -293,21 +302,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Exception in thread Thread-37:\n",
+      "Exception in thread Thread-25:\n",
       "Traceback (most recent call last):\n",
       "  File \"/anaconda/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
       "    self.run()\n",
-      "  File \"coord.py\", line 152, in run\n",
-      "    if debug:\n",
-      "NameError: global name 'debug' is not defined\n",
-      " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n",
+      "  File \"/anaconda/lib/python2.7/threading.py\", line 754, in run\n",
+      "    self.__target(*self.__args, **self.__kwargs)\n",
+      "  File \"coord.py\", line 320, in run\n",
+      "    self.app.run(host=self.ip, threaded=True)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 841, in run\n",
+      "    run_simple(host, port, self, **options)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 708, in run_simple\n",
+      "    inner()\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 670, in inner\n",
+      "    fd=fd)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 558, in make_server\n",
+      "    passthrough_errors, ssl_context, fd=fd)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 476, in __init__\n",
+      "    HTTPServer.__init__(self, (host, int(port)), handler)\n",
+      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 417, in __init__\n",
+      "    self.server_bind()\n",
+      "  File \"/anaconda/lib/python2.7/BaseHTTPServer.py\", line 108, in server_bind\n",
+      "    SocketServer.TCPServer.server_bind(self)\n",
+      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 431, in server_bind\n",
+      "    self.socket.bind(self.server_address)\n",
+      "  File \"/anaconda/lib/python2.7/socket.py\", line 228, in meth\n",
+      "    return getattr(self._sock,name)(*args)\n",
+      "error: [Errno 49] Can't assign requested address\n",
       "\n"
      ]
     }
@@ -316,7 +344,7 @@
     "%autoreload 2\n",
     "from coord import Coordinator\n",
     "\n",
-    "coord = Coordinator(name=\"caliber-slice\",epoch_time=10,config_file=\"demo.config\", scenario_file=\"scenario.data\",max_rate_mbps=500)\n",
+    "coord = Coordinator(app_ip=\"192.168.120.119\",name=\"caliber-slice\",epoch_time=10,config_file=\"calibers-denv.config\", scenario_file=\"scenario.data\",max_rate_mbps=500)\n",
     "coord.scheduler.debug = False\n",
     "coord.debug = False\n",
     "coord.start()\n"
@@ -331,37 +359,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [08/Nov/2017 11:11:17] \"POST /api/stop HTTP/1.1\" 200 -\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[wash-192 -> scinet-dtn completion: 0, cern-194 -> scinet-dtn completion: 0, amst-190 -> scinet-dtn completion: 0, aofa-191 -> scinet-dtn completion: 0, denv-201 -> scinet-dtn completion: 0, atla-200 -> scinet-dtn completion: 0]\n",
-      "[('wash-192', 8589400435)] [] []\n"
+      "\"Shutdown in progress...\"\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    26  100    26    0     0   3478      0 --:--:-- --:--:-- --:--:--  6500\n"
      ]
     }
    ],
    "source": [
-    "coord.start()"
+    "%%bash\n",
+    "curl -H \"Content-Type: application/json\" http://localhost:5000/api/stop -X POST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Request simulation is stopped.\n"
+      "{\"cern-194\": {\"expected_size\": 5120, \"file_route\": \"/tmp/files_storage/cern-194\", \"deadline\": 1510188274.0855346}, \"aofa-191\": {\"expected_size\": 5120, \"file_route\": \"/tmp/files_storage/aofa-191\", \"deadline\": 1510188292.9837081}, \"amst-190\": {\"expected_size\": 30720, \"file_route\": \"/tmp/files_storage/amst-190\", \"deadline\": 1510193727.1111817}, \"denv-201\": {\"expected_size\": 15360, \"file_route\": \"/tmp/files_storage/denv-201\", \"deadline\": 1510190434.617468}, \"atla-200\": {\"expected_size\": 512, \"file_route\": \"/tmp/files_storage/atla-200\", \"deadline\": 1510187297.5485396}, \"wash-192\": {\"expected_size\": 10240, \"file_route\": \"/tmp/files_storage/wash-192\", \"deadline\": 1510189353.4923275}}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100   686  100   686    0     0   4338      0 --:--:-- --:--:-- --:--:--  4369\n"
      ]
     }
    ],
    "source": [
-    "coord.isRunning = False\n"
+    "%%bash\n",
+    "curl -H \"Content-Type: application/json\" http://192.168.120.119:5000/api/configs/ -X GET\n"
    ]
   },
   {
@@ -421,7 +479,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
