--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -137,7 +137,17 @@
     "sites = [wash,amst,cern,denv,aofa,atla]\n",
     "\n",
     "config =Config(switches=switches,dtns=dtns,sites=sites)\n",
-    "config.save(config_file=\"calibers-denv.config\")\n"
+    "config.save(config_file=\"calibers-denv.config\")\n",
+    "\n",
+    "from coord import SingleFileGen\n",
+    "\n",
+    "capacity = 500000 # 500 Mbps\n",
+    "epoch = 5 * 60 # 5 mins\n",
+    "\n",
+    "buckets=[30*1024,15*1024,10*1024,5*1024,1*1025,512,128]\n",
+    "gen = SingleFileGen(dtns,capacity,epoch,buckets)\n",
+    "reqs = gen.generate_requests(iterations = 10, scale = 0.1, dst_dtn = scinet_dtn, min_bias=10)\n",
+    "gen.save(\"scenario.data\",reqs)\n"
    ]
   },
   {
