--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -2,18 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "\n",
@@ -109,13 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "new_config = get_config(config_file=\"demo.config\")"
+    "from coord import get_config as gc\n",
+    "new_config = gc(config_file=\"calibers-denv.config\")"
    ]
   },
   {
@@ -446,81 +440,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import pickle\n",
+    "\n",
+    "def get_config():\n",
+    "    get_url = \"http://192.168.120.119:5000/api/config/\"\n",
+    "    try:\n",
+    "        results = requests.get(get_url)\n",
+    "    except requests.exceptions.RequestException:\n",
+    "        return None\n",
+    "    if results.status_code==200:\n",
+    "        return pickle.loads(results.json())\n",
+    "    else: \n",
+    "        return None\n",
+    "\n",
+    "c = get_config()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Tue Oct 17 15:11:52 2017'"
+       "[wash-192, cern-194, amst-190, aofa-191, denv-201, atla-200]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "c.dtns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"message\": \"Internal Server Error\"}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\r",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r",
+      "100    37  100    37    0     0    238      0 --:--:-- --:--:-- --:--:--   241\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "curl -H \"Content-Type: application/json\" http://192.168.120.119:5000/api/config/ -X GET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "nc = pickle.dumps(new_config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "cc = pickle.loads(c.json())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[wash-192, cern-194, amst-190, aofa-191, denv-201, atla-200]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc.dtns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " * Running on http://localhost:5000/ (Press CTRL+C to quit)\n",
+      "[2017-11-09 17:55:34,287] ERROR in app: Exception on /start/12 [PUT]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 1612, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 1598, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask_restful/__init__.py\", line 480, in wrapper\n",
+      "    resp = resource(*args, **kwargs)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask/views.py\", line 84, in view\n",
+      "    return self.dispatch_request(*args, **kwargs)\n",
+      "  File \"/anaconda/lib/python2.7/site-packages/flask_restful/__init__.py\", line 595, in dispatch_request\n",
+      "    resp = meth(*args, **kwargs)\n",
+      "  File \"<ipython-input-12-137526d33890>\", line 41, in put\n",
+      "    subprocess.Popen(('globus-url-copy -p 1 file:///storage/'+size+'.img ftp://'+dest).split())\n",
+      "  File \"/anaconda/lib/python2.7/subprocess.py\", line 390, in __init__\n",
+      "    errread, errwrite)\n",
+      "  File \"/anaconda/lib/python2.7/subprocess.py\", line 1024, in _execute_child\n",
+      "    raise child_exception\n",
+      "OSError: [Errno 2] No such file or directory\n",
+      "127.0.0.1 - - [09/Nov/2017 17:55:34] \"PUT /start/12 HTTP/1.1\" 500 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GOT FILE\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
     "import time\n",
+    "import datetime\n",
+    "import subprocess\n",
+    "import re\n",
+    "import json\n",
+    "from flask import Flask, request\n",
+    "from flask_restful import Resource, Api\n",
+    "app = Flask(__name__)\n",
+    "api = Api(app)\n",
     "\n",
-    "t=1508278312.7074184\n",
-    "time.ctime(t)"
+    "\n",
+    "import socket\n",
+    "import fcntl\n",
+    "import struct\n",
+    "\n",
+    "def get_ip_address(ifname):\n",
+    "    s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
+    "    return socket.inet_ntoa(fcntl.ioctl(\n",
+    "        s.fileno(),\n",
+    "        0x8915,  # SIOCGIFADDR\n",
+    "        struct.pack('256s', ifname[:15])\n",
+    "    )[20:24])\n",
+    "\n",
+    "@app.route('/setrate/<rate>')\n",
+    "def setRate(rate):\n",
+    "    try:\n",
+    "        subprocess.check_call(('tc qdisc change dev eth1 root fq maxrate '+rate).split())\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print e\n",
+    "    outRate = subprocess.check_output('tc -i qdisc show dev eth1'.split())\n",
+    "    outRate = re.findall('maxrate \\d+',outRate)[0]\n",
+    "    outRate = re.findall('\\d+',outRate)[0]\n",
+    "    return outRate\n",
+    "    \n",
+    "class FileTransfer(Resource):\n",
+    "    def put(self, size):\n",
+    "        print \"GOT FILE\"\n",
+    "        FileTransfer.r = request.form\n",
+    "        dest = request.json['dest']\n",
+    "        subprocess.Popen(('globus-url-copy -p 1 file:///storage/'+size+'.img ftp://'+dest).split())\n",
+    "        time.sleep(.4) # Wait for the connection to establish\n",
+    "        output = subprocess.check_output('ss -int'.split())\n",
+    "        return output\n",
+    "\n",
+    "api.add_resource(FileTransfer, '/start/<string:size>')\n",
+    "app.run(host='localhost')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__cmp__',\n",
+       " '__contains__',\n",
+       " '__copy__',\n",
+       " '__deepcopy__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dict__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__setstate__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_hash_cache',\n",
+       " '_iter_hashitems',\n",
+       " 'add',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'deepcopy',\n",
+       " 'fromkeys',\n",
+       " 'get',\n",
+       " 'getlist',\n",
+       " 'has_key',\n",
+       " 'items',\n",
+       " 'iteritems',\n",
+       " 'iterkeys',\n",
+       " 'iterlists',\n",
+       " 'iterlistvalues',\n",
+       " 'itervalues',\n",
+       " 'keys',\n",
+       " 'lists',\n",
+       " 'listvalues',\n",
+       " 'pop',\n",
+       " 'popitem',\n",
+       " 'popitemlist',\n",
+       " 'poplist',\n",
+       " 'setdefault',\n",
+       " 'setlist',\n",
+       " 'setlistdefault',\n",
+       " 'to_dict',\n",
+       " 'update',\n",
+       " 'values',\n",
+       " 'viewitems',\n",
+       " 'viewkeys',\n",
+       " 'viewvalues']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "TESTING SLICE CONFIGURATION\n",
-    "--------------------------\n",
-    "Following is the configuration for the testing topology."
+    "dir(FileTransfer.r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "z = FileTransfer.r.to_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z"
    ]
   },
   {
@@ -530,45 +769,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "%autoreload 2\n",
-    "# requires flask and flask_restful packages (pip install flask_restful)\n",
-    "from coord import Switch, DTN, Site, Config, get_config\n",
-    "\n",
-    "# Corsa Switches - rtt to SCinet Denver.\n",
-    "wash_sw = Switch(\"wash-tb-of-1\",\"192.168.120.41\",None,vfc=\"br1\",ofport=11,rtt=38.8)\n",
-    "cern_sw = Switch(\"cern-272-tb-of-1\",\"192.168.120.36\",None,\"br1\",10,rtt=89.5)\n",
-    "amst_sw = Switch(\"amst-tb-of-1\",\"192.168.120.35\",None,\"br1\",23,rtt=82.5)\n",
-    "aofa_sw = Switch(\"aofa-tb-of-1\",\"192.168.120.33\",None,\"br1\",2,rtt=5.3)\n",
-    "denv_sw = Switch(\"denv-tb-of-1\",\"192.168.120.37\",None,\"br1\",10,rtt=2)\n",
-    "atla_sw = Switch(\"atla-tb-of-1\",\"192.168.120.34\",None,\"br1\",8,rtt=39.5)\n",
-    "switches=[wash_sw,cern_sw,amst_sw,aofa_sw,denv_sw,atla_sw]\n",
-    "\n",
-    "# Data Transfer Node\n",
-    "wash_dtn = DTN(\"wash-192\",\"192.168.120.192\",port=\"eth1\")\n",
-    "cern_dtn = DTN(\"cern-194\",\"192.168.120.194\",port=\"eth1\")\n",
-    "amst_dtn = DTN(\"amst-190\",\"192.168.120.190\",port=\"eth1\")\n",
-    "aofa_dtn = DTN(\"aofa-191\",\"192.168.120.191\",port=\"eth1\")\n",
-    "denv_dtn = DTN(\"denv-201\",\"192.168.120.201\",port=\"eth1\")\n",
-    "atla_dtn = DTN(\"atla-200\",\"192.168.120.200\",port=\"eth1\")\n",
-    "dtns = [wash_dtn,cern_dtn,amst_dtn,aofa_dtn,denv_dtn,atla_dtn]\n",
-    "\n",
-    "scinet_dtn = DTN(\"scinet-dtn\",\"192.168.120.37\",port=\"eth1\")\n",
-    "\n",
-    "# Simulated sites\n",
-    "wash = Site(name=\"wash\", switch=wash_sw, dtn=wash_dtn)\n",
-    "amst = Site(name=\"amst\", switch=amst_sw, dtn=amst_dtn)\n",
-    "cern = Site(name=\"cern\", switch=cern_sw, dtn=cern_dtn)\n",
-    "denv = Site(name=\"denv\", switch=denv_sw, dtn=denv_dtn)\n",
-    "aofa = Site(name=\"aofa\", switch=aofa_sw, dtn=aofa_dtn)\n",
-    "atla = Site(name=\"atla\", switch=atla_sw, dtn=atla_dtn)\n",
-    "scinet = Site(name=\"scinet\", switch=None, dtn=scinet_dtn)\n",
-    "\n",
-    "sites = [wash,amst,cern,denv,aofa,atla]\n",
-    "\n",
-    "config =Config(switches=switches,dtns=dtns,sites=sites)\n",
-    "config.save(config_file=\"testing.config\")\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
