--- a/sc17/Setup.ipynb
+++ b/sc17/Setup.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,6 +260,79 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config =Config(switches=[aofa_sw],dtns=[aofa_dtn],sites=[aofa])\n",
+    "config.save(config_file=\"test.config\")\n",
+    "from coord import SingleFileGen\n",
+    "buckets=[1024000000]\n",
+    "gen = SingleFileGen([aofa_dtn],500,1,buckets)\n",
+    "reqs = gen.generate_requests(iterations = 10, scale = 0.1, dst_dtn = scinet_dtn, min_bias=10)\n",
+    "gen.save(\"test.data\",reqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[aofa-191 -> scinet-dtn completion: 0 deadline: 217842219.195],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 218690042.947],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 216944670.281],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 217674626.445],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 220661869.734],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 220724303.996],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 216532649.003],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 216725399.238],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 216372685.53],\n",
+       " [aofa-191 -> scinet-dtn completion: 0 deadline: 217411614.85]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reqs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reqs_per_dtn = zip(*reqs)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(reqs_per_dtn)\n"
    ]
   },
   {
