--- a/sc17/Controller.ipynb
+++ b/sc17/Controller.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -300,37 +300,15 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in thread Thread-25:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/anaconda/lib/python2.7/threading.py\", line 801, in __bootstrap_inner\n",
-      "    self.run()\n",
-      "  File \"/anaconda/lib/python2.7/threading.py\", line 754, in run\n",
-      "    self.__target(*self.__args, **self.__kwargs)\n",
-      "  File \"coord.py\", line 320, in run\n",
-      "    self.app.run(host=self.ip, threaded=True)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/flask/app.py\", line 841, in run\n",
-      "    run_simple(host, port, self, **options)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 708, in run_simple\n",
-      "    inner()\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 670, in inner\n",
-      "    fd=fd)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 558, in make_server\n",
-      "    passthrough_errors, ssl_context, fd=fd)\n",
-      "  File \"/anaconda/lib/python2.7/site-packages/werkzeug/serving.py\", line 476, in __init__\n",
-      "    HTTPServer.__init__(self, (host, int(port)), handler)\n",
-      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 417, in __init__\n",
-      "    self.server_bind()\n",
-      "  File \"/anaconda/lib/python2.7/BaseHTTPServer.py\", line 108, in server_bind\n",
-      "    SocketServer.TCPServer.server_bind(self)\n",
-      "  File \"/anaconda/lib/python2.7/SocketServer.py\", line 431, in server_bind\n",
-      "    self.socket.bind(self.server_address)\n",
-      "  File \"/anaconda/lib/python2.7/socket.py\", line 228, in meth\n",
-      "    return getattr(self._sock,name)(*args)\n",
-      "error: [Errno 49] Can't assign requested address\n",
-      "\n"
+     "ename": "TypeError",
+     "evalue": "__init__() got an unexpected keyword argument 'epoch'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-87c3b581f6c7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mcoord\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mcoord\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordinator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapp_ip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"192.168.120.119\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"caliber-slice\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mconfig_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"calibers-denv.config\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscenario_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"scenario.data\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate_mbps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/lomax/Documents/workspace/calibers/sc17/coord.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, config_file, epoch_time, max_rate_mbps, scenario_file, algo, app_ip)\u001b[0m\n\u001b[1;32m    178\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rate\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_rate_mbps\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m1000\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    179\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mapp_ip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 180\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscheduler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscheduler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mScheduler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mepoch_time\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malgo\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdebug\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    181\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCoordApp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"calibers-api\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mip\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapp_ip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoord\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    182\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'epoch'"
      ]
     }
    ],
@@ -557,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +700,7 @@
        " 'viewvalues']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
